<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:background="#5AB8DD"
    android:orientation="vertical"
    android:weightSum="3">


    <LinearLayout
        android:id="@+id/quickaction_bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical|left"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:antialias="true"
            android:scaleType="fitXY"
            android:text="@string/quickaction_bluetooth"
            android:textColor="#ffffff"
            android:textSize="18dp" />
    </LinearLayout>

    <View
        android:id="@+id/separator7"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="3dp"
        android:background="#a9a9a9" />

    <LinearLayout
        android:id="@+id/quickaction_manual"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical|left"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:antialias="true"
            android:scaleType="fitXY"
            android:text="@string/quickaction_manual_mode"
            android:textColor="#ffffff"
            android:textSize="18dp" />
    </LinearLayout>

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="3dp"
        android:background="#a9a9a9" />

    <LinearLayout
        android:id="@+id/quickaction_sync"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical|left"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:antialias="true"
            android:scaleType="fitXY"
            android:text="@string/quickaction_sync_mode"
            android:textColor="#ffffff"
            android:textSize="18dp" />
    </LinearLayout>

    <View
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="3dp"
        android:background="#a9a9a9" />

    <LinearLayout
        android:id="@+id/quickaction_5diet_rules"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical|left"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:antialias="true"
            android:scaleType="fitXY"
            android:text="@string/quickaction_5_diet_rules"
            android:textColor="#ffffff"
            android:textSize="18dp" />

    </LinearLayout>

    <View
        android:id="@+id/separator_5diet"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="3dp"
        android:background="#a9a9a9" />

    <LinearLayout
        android:id="@+id/quickaction_mealList"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical|left"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:antialias="true"
            android:scaleType="fitXY"
            android:text="@string/quickaction_meal_list"
            android:textColor="#ffffff"
            android:textSize="18dp" />

    </LinearLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="3dp"
        android:background="#a9a9a9" />

    <LinearLayout
        android:id="@+id/quickaction_mealDashboard"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical|left"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:antialias="true"
            android:scaleType="fitXY"
            android:text="@string/quickaction_meal_dashboard"
            android:textColor="#ffffff"
            android:textSize="18dp" />
    </LinearLayout>

    <View
        android:id="@+id/separator8"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="3dp"
        android:background="#a9a9a9" />


    <LinearLayout
        android:id="@+id/quickaction_help"

        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical|left"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:antialias="true"
            android:scaleType="fitXY"
            android:text="@string/quickaction_help"
            android:textColor="#ffffff"
            android:textSize="18dp" />
    </LinearLayout>

    <View
        android:id="@+id/separator6"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="3dp"
        android:background="#a9a9a9" />

    <LinearLayout
        android:id="@+id/quickaction_about"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical|left"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:antialias="true"
            android:scaleType="fitXY"
            android:text="@string/quickaction_about"
            android:textColor="#ffffff"
            android:textSize="18dp" />
    </LinearLayout>

    <View
        android:id="@+id/separator3"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="3dp"
        android:background="#a9a9a9" />

    <LinearLayout
        android:id="@+id/quickaction_contact"

        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical|left"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:antialias="true"
            android:scaleType="fitXY"
            android:text="@string/quickaction_contact_us"
            android:textColor="#ffffff"
            android:textSize="18dp" />
    </LinearLayout>

    <View
        android:id="@+id/separator4"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="3dp"
        android:background="#a9a9a9" />

    <LinearLayout
        android:id="@+id/quickaction_logout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical|left"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:antialias="true"
            android:scaleType="fitXY"
            android:text="@string/quickaction_logout"
            android:textColor="#ffffff"

            android:textSize="18dp" />
    </LinearLayout>


    <View
        android:id="@+id/separator5"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="3dp"
        android:background="#a9a9a9" />

</LinearLayout>