<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/loginbg"
    android:orientation="vertical">

    <include
        android:id="@+id/headermain"
        layout="@layout/header_main" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/bg01"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bite_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="30dp"
            android:src="@drawable/hapiforkiconlogo">
        </ImageView>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/curvetop"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/ed_username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/user_name"
                    android:textSize="20dp"
                    android:inputType="textEmailAddress" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#cacaca" />

                <EditText
                    android:id="@+id/ed_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="20dp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/progress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:visibility="visible">

                <ProgressBar
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal|top"
                    android:indeterminateDrawable="@drawable/animateprogress"
                    android:visibility="visible" />

            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/btnrel_1"
            android:layout_width="252dp"
            android:layout_height="47dp"
            android:layout_margin="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/common_button">


            <TextView
                android:id="@+id/btntext_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="left"
                android:text="@string/sign_in"
                android:textColor="#ffffff"
                android:textSize="24dp"
                android:textStyle="bold"></TextView>


        </RelativeLayout>


        <TextView
            android:id="@+id/welcomemessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/sign_up"
            android:textColor="#3399ff"
            android:textSize="18dp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>