<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/loginbg"
    android:orientation="vertical">

    <include
        android:id="@+id/headermain"
        layout="@layout/header_main" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/headermain"
        android:background="@drawable/loginbg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/scanning_devices_pairing"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/warning_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hello"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:src="@drawable/warning"
            android:visibility="gone"></ImageView>


        <LinearLayout
            android:id="@+id/progress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:visibility="visible">

            <ProgressBar
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal|top"
                android:indeterminateDrawable="@drawable/animateprogress"
                android:visibility="visible" />
        </LinearLayout>

        <TextView
            android:id="@+id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/warning_icon"
            android:layout_centerHorizontal="true"
            android:layout_margin="30dp"
            android:text="@string/please_make_sure_hapifork_on"
            android:textSize="16dp"
            android:textStyle="bold"
            android:visibility="gone" />

        <ListView
            android:id="@+id/new_devices"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnrel_1"
            android:layout_below="@id/hello"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:visibility="visible"></ListView>



        <RelativeLayout
            android:id="@+id/btnrel_2"
            android:layout_width="252dp"
            android:layout_height="47dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/common_button">

            <TextView
                android:id="@+id/btntext_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="left"
                android:text="@string/cancel_setup"
                android:textColor="#ffffff"
                android:textSize="16dp"
                android:textStyle="bold"></TextView>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/btnrel_1"
            android:layout_width="252dp"
            android:layout_height="47dp"
            android:layout_above="@id/btnrel_2"
            android:layout_centerHorizontal="true"
            android:background="@drawable/common_button">

            <TextView
                android:id="@+id/btntext_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:text="@string/stop_scanning"
                android:textColor="#ffffff"
                android:textSize="16dp"
                android:textStyle="bold"></TextView>


        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>